--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,8 @@ import axios from "axios";
 
 // Profile Type & Business Unit Options
 const ProfileTypeOptions = ["Provider", "Consumer", "Both", "Inheritor"];
-const BusinessUnitOptions = ["ABC", "UIO", "POA", "SKA-C"];
+const BusinessUnitOptions = ["ABC", "UIO", "POA", "SKA-C", "Other"];
+const MaturityProjectOptions = ["Increase", "Decrease", "Maintain"];
 
 const CSFScopeTable = () => {
   const [tableData, setTableData] = useState([]);
@@ -38,60 +39,178 @@ const CSFScopeTable = () => {
     fetchData();
   }, []);
 
-  // **L1: Subcategory Level (FILTERS WORKING CORRECTLY)**
+  // **L1: Subcategory Level (Filtering Enabled)**
   const subcategoryColumns = useMemo(() => [
-    { accessorKey: "subcategoryName", header: "Subcategory", size: 120 },
+    { accessorKey: "subcategoryName", header: "Subcategory", size: 120, filterVariant: "text" },
     {
       accessorKey: "subcategoryDescription",
       header: "Description",
       size: 300,
+      filterVariant: "text",
       Cell: ({ cell }) => (
         <div style={{ whiteSpace: "normal", wordWrap: "break-word", overflowWrap: "break-word" }}>
           {cell.getValue()}
         </div>
       ),
     },
-    { accessorKey: "relatedSubcategories", header: "Related Subcategories" },
-    {
-      accessorKey: "businessUnitAbbr",
-      header: "BU",
-      filterVariant: "multi-select",
-      filterSelectOptions: BusinessUnitOptions,
-      accessorFn: (row) => row.businessUnits.map((bu) => bu.businessUnitAbbr).join(", "),
-    },
+    { accessorKey: "relatedSubcategories", header: "Related Subcategories", filterVariant: "text" },
+  ], []);
+
+  // **L2: Business Unit Level (FULLY EDITABLE)**
+  const businessUnitColumns = useMemo(() => [
+    { accessorKey: "businessUnitAbbr", header: "BU", enableEditing: false },
     {
       accessorKey: "businessUnitOwner",
       header: "BU Owner",
-      filterVariant: "multi-select",
-      filterSelectOptions: [...new Set(tableData.flatMap((row) => row.businessUnits.map((bu) => bu.businessUnitOwner)))],
-      accessorFn: (row) => row.businessUnits.map((bu) => bu.businessUnitOwner).join(", "),
+      Edit: ({ cell }) => (
+        <Autocomplete
+          multiple
+          options={[]} 
+          defaultValue={cell.getValue() ? cell.getValue().split(", ") : []}
+          onInputChange={async (event, newValue) => {
+            const results = await fetchWorkerNames(newValue);
+            cell.setValue(results.map(res => res.value).join(", "));
+          }}
+          renderInput={(params) => <TextField {...params} label="Search Owners (First Last)" />}
+        />
+      ),
+    },
+    {
+      accessorKey: "auditorSubcatCustodian",
+      header: "Auditor Custodian",
+      Edit: ({ cell }) => (
+        <Autocomplete
+          multiple
+          options={[]} 
+          defaultValue={cell.getValue() ? cell.getValue().split(", ") : []}
+          onInputChange={async (event, newValue) => {
+            const results = await fetchWorkerNames(newValue);
+            cell.setValue(results.map(res => res.value).join(", "));
+          }}
+          renderInput={(params) => <TextField {...params} label="Search Custodians (First Last)" />}
+        />
+      ),
     },
     {
       accessorKey: "auditorIsInScope",
       header: "In Scope?",
-      filterVariant: "multi-select",
-      filterSelectOptions: ["Yes", "No"],
-      accessorFn: (row) => row.businessUnits.map((bu) => bu.auditorIsInScope).join(", "),
+      Edit: ({ cell }) => (
+        <TextField
+          select
+          value={cell.getValue() || ""}
+          onChange={(event) => {
+            const newValue = event.target.value;
+            cell.setValue(newValue);
+            if (newValue === "Yes") {
+              cell.row.getCell("auditorJustification").setValue("");
+            }
+          }}
+        >
+          <MenuItem value="Yes">Yes</MenuItem>
+          <MenuItem value="No">No</MenuItem>
+        </TextField>
+      ),
     },
-  ], [tableData]);
+    {
+      accessorKey: "auditorJustification",
+      header: "Justification",
+      Edit: ({ cell, row }) => (
+        <TextField
+          value={cell.getValue() || ""}
+          onChange={(event) => cell.setValue(event.target.value)}
+          disabled={row.getValue("auditorIsInScope") !== "No"}
+        />
+      ),
+    },
+    {
+      accessorKey: "auditorProfileType",
+      header: "Profile Type",
+      Edit: ({ cell }) => (
+        <TextField
+          select
+          value={cell.getValue() || ""}
+          onChange={(event) => {
+            const newValue = event.target.value;
+            cell.setValue(newValue);
+            if (!["Consumer", "Both"].includes(newValue)) {
+              cell.row.getCell("auditorConsumingFromBusinessUnit").setValue("");
+            }
+          }}
+        >
+          {ProfileTypeOptions.map((option) => (
+            <MenuItem key={option} value={option}>
+              {option}
+            </MenuItem>
+          ))}
+        </TextField>
+      ),
+    },
+    {
+      accessorKey: "auditorConsumingFromBusinessUnit",
+      header: "Consuming From BU",
+      Edit: ({ cell, row }) => (
+        <TextField
+          select
+          value={cell.getValue() || ""}
+          onChange={(event) => cell.setValue(event.target.value)}
+        >
+          {BusinessUnitOptions.map((option) => (
+            <MenuItem key={option} value={option}>
+              {option}
+            </MenuItem>
+          ))}
+        </TextField>
+      ),
+    },
+    {
+      accessorKey: "otherDepartment",
+      header: "Other Department",
+      Edit: ({ cell, row }) => (
+        <TextField
+          value={cell.getValue() || ""}
+          onChange={(event) => cell.setValue(event.target.value)}
+          disabled={row.getValue("auditorConsumingFromBusinessUnit") !== "Other"}
+        />
+      ),
+    },
+    {
+      accessorKey: "maturityProject",
+      header: "Maturity Project",
+      Edit: ({ cell }) => (
+        <TextField select value={cell.getValue() || ""} onChange={(event) => cell.setValue(event.target.value)}>
+          {MaturityProjectOptions.map((option) => (
+            <MenuItem key={option} value={option}>
+              {option}
+            </MenuItem>
+          ))}
+        </TextField>
+      ),
+    },
+  ], []);
 
   return (
     <MaterialReactTable
       columns={subcategoryColumns}
       data={tableData}
-      enableEditing={false} // L1 is NOT editable
-      filterFromLeafRows={true} // ✅ FIXES FILTERING ISSUE ✅
+      enableEditing={false}
       renderDetailPanel={({ row }) => (
         <MaterialReactTable
-          columns={[
-            { accessorKey: "businessUnitAbbr", header: "BU", enableEditing: false },
-            { accessorKey: "businessUnitOwner", header: "BU Owner" },
-            { accessorKey: "auditorIsInScope", header: "In Scope?" },
-          ]}
+          columns={businessUnitColumns}
           data={row.original.businessUnits}
           enableEditing
           editDisplayMode="row"
           muiTableContainerProps={{ sx: { overflowX: "auto" }}}
+          renderDetailPanel={() => (
+            <Box p={2} sx={{ backgroundColor: "#f4f4f4", borderRadius: "8px", marginTop: "10px" }}>
+              <Typography variant="h6">Profile Type Definitions</Typography>
+              <ul>
+                <li><strong>Provider:</strong> Supplies services to other BUs.</li>
+                <li><strong>Consumer:</strong> Receives services from other BUs.</li>
+                <li><strong>Both:</strong> Acts as both Provider & Consumer.</li>
+                <li><strong>Inheritor:</strong> Inherits control from another BU.</li>
+              </ul>
+            </Box>
+          )}
         />
       )}
     />
