--- a/.gitignore
+++ b/.gitignore
@@ -39,13 +39,32 @@ const CSFScopeTable = () => {
     fetchData();
   }, []);
 
+  // **API Call to Fetch Worker Names**
+  const fetchWorkerNames = async (inputValue) => {
+    if (!inputValue.includes(" ")) return [];
+    const [firstName, lastName] = inputValue.split(" ");
+
+    try {
+      const response = await axios.get(`/api/GetWorkerName`, {
+        params: { FirstName: firstName, LastName: lastName }
+      });
+      return response.data.map(worker => ({
+        label: `${worker.Namefull} (${worker.JobTitle})`,
+        value: worker.Namefull,
+      }));
+    } catch (error) {
+      console.error("Error fetching worker names:", error);
+      return [];
+    }
+  };
+
   // **L1: Subcategory Level (Filters Always Enabled)**
   const subcategoryColumns = useMemo(() => [
     { 
       accessorKey: "subcategoryName", 
       header: "Subcategory", 
       size: 120, 
-      filterVariant: "multi-select", // Multi-select filter enabled
+      filterVariant: "multi-select",
       filterSelectOptions: [...new Set(tableData.map(row => row.subcategoryName))],
     },
     {
@@ -103,7 +122,7 @@ const CSFScopeTable = () => {
       Edit: ({ cell }) => (
         <TextField
           select
-          value={cell.getValue() || ""}
+          defaultValue={cell.getValue() || ""}
           onChange={(event) => {
             const newValue = event.target.value;
             cell.setValue(newValue);
@@ -122,7 +141,7 @@ const CSFScopeTable = () => {
       header: "Justification",
       Edit: ({ cell, row }) => (
         <TextField
-          value={cell.getValue() || ""}
+          defaultValue={cell.getValue() || ""}
           onChange={(event) => cell.setValue(event.target.value)}
           disabled={row.getValue("auditorIsInScope") !== "No"}
         />
@@ -134,7 +153,7 @@ const CSFScopeTable = () => {
       Edit: ({ cell }) => (
         <TextField
           select
-          value={cell.getValue() || ""}
+          defaultValue={cell.getValue() || ""}
           onChange={(event) => {
             const newValue = event.target.value;
             cell.setValue(newValue);
@@ -151,49 +170,13 @@ const CSFScopeTable = () => {
         </TextField>
       ),
     },
-    {
-      accessorKey: "auditorConsumingFromBusinessUnit",
-      header: "Consuming From BU",
-      Edit: ({ cell }) => (
-        <TextField select value={cell.getValue() || ""} onChange={(event) => cell.setValue(event.target.value)}>
-          {BusinessUnitOptions.map((option) => (
-            <MenuItem key={option} value={option}>
-              {option}
-            </MenuItem>
-          ))}
-        </TextField>
-      ),
-    },
-    {
-      accessorKey: "otherDepartment",
-      header: "Other Department",
-      Edit: ({ cell, row }) => (
-        <TextField
-          value={cell.getValue() || ""}
-          onChange={(event) => cell.setValue(event.target.value)}
-          disabled={row.getValue("auditorConsumingFromBusinessUnit") !== "Other"}
-        />
-      ),
-    },
-    {
-      accessorKey: "maturityProjection",
-      header: "Maturity Projection",
-      Edit: ({ cell }) => (
-        <TextField select value={cell.getValue() || ""} onChange={(event) => cell.setValue(event.target.value)}>
-          {MaturityProjectionOptions.map((option) => (
-            <MenuItem key={option} value={option}>
-              {option}
-            </MenuItem>
-          ))}
-        </TextField>
-      ),
-    },
   ], []);
 
   return (
     <MaterialReactTable
       columns={subcategoryColumns}
       data={tableData}
+      enableFilters
       enableEditing={false}
       renderDetailPanel={({ row }) => (
         <MaterialReactTable
