--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,27 @@
-const handleSaveCell = (cell, value) => {
-    setTableData((prevData) =>
-      prevData.map((subcategory) => ({
-        ...subcategory,
-        businessUnits: subcategory.businessUnits.map((bu) =>
-          bu.businessUnitAbbr === cell.row.original.businessUnitAbbr
-            ? {
-                ...bu,
-                [cell.column.id]: value,
-                ...(cell.column.id === "auditorProfileType" &&
-                !["Consumer", "Both"].includes(value)
-                  ? { auditorConsumingFromBusinessUnit: "" }
-                  : {}),
-                ...(cell.column.id === "auditorIsInScope" && value === "Yes"
-                  ? { auditorJustification: "" }
-                  : {}),
-              }
-            : bu
-        ),
-      }))
-    );
-  };
-
+{
+      accessorKey: "otherDepartment",
+      header: "Other Department",
+      Edit: ({ cell, row }) => (
+        <TextField
+          value={cell.getValue() || ""}
+          onChange={(event) => cell.setValue(event.target.value)}
+          disabled={row.getValue("auditorConsumingFromBusinessUnit") !== "Other"}
+        />
+      ),
+    },
+    {
+      accessorKey: "maturityProjection",
+      header: "Maturity Projection",
+      Edit: ({ cell }) => (
+        <TextField select value={cell.getValue() || ""} onChange={(event) => cell.setValue(event.target.value)}>
+          {MaturityProjectionOptions.map((option) => (
+            <MenuItem key={option} value={option}>
+              {option}
+            </MenuItem>
+          ))}
+        </TextField>
+      ),
+    },
 import React, { useEffect, useState, useMemo } from "react";
 import MaterialReactTable from "material-react-table";
 import { MenuItem, TextField, Autocomplete, Box, Typography } from "@mui/material";
